# genepriority-experiment

./: .gitignore  pyproject.toml
src/genepriority_experiment/: __init__.py
src/genepriority_experiment.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/genepriority_experiment/models/: neural_cf.py  neural_cf_routines.py
src/genepriority_experiment/postprocessing/: __init__.py  dataframes.py  figures.py  model_evaluation_collection.py
src/genepriority_experiment/script/: parser.py  post.py  run_experiments.py  run_neural_cf.py  run_post.py
tests/: test_commands.py
