[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "genepriority-experiment"
readme = "README.md"
description = "Experiment on genepriority"
classifiers = ["Programming Language :: Python :: 3.11"]
requires-python = ">=3.11"
dynamic = ["version"]
dependencies = [
    "genepriority @ git+https://github.com/azimgivron/genepriority.git@main"
]

[project.scripts]
genepExp = "genepriority_experiment.script.run_experiments:main"
genepExpPost = "genepriority_experiment.script.run_post:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
